--- a/home.css
+++ b/home.css
@@ -148,6 +148,7 @@ table {
 td {
     border: 1px solid #ccc;
     padding: 10px;
+    text-align: center;
 }
 
 input[type="number"] {
@@ -156,4 +157,21 @@ input[type="number"] {
     text-align: center;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+
+#result-container {
+    margin-top: 20px;
+}
+
+#result-table {
+    border-collapse: collapse;
+    margin: 0 auto;
+}
+
+#result-table td {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+    width: 50px;
+    height: 50px;
 }
